<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.TimerActivity">


  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/list_of_exercises"
    android:layout_width="288dp"
    android:layout_height="143dp"
    android:layout_marginTop="68dp"
    android:layout_marginBottom="33dp"
    app:layout_constraintBottom_toTopOf="@+id/save_new_series_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hours_new_exercise"
    app:layout_constraintVertical_bias="1.0"
    android:contentDescription="@string/list_of_exercises" />

  <Button
    android:id="@+id/new_exercise_button"
    android:layout_width="199dp"
    android:layout_height="56dp"
    android:text="Tipo do Exercício"
    app:layout_constraintBottom_toTopOf="@+id/hours_new_exercise"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.455"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/new_series_name"
    app:layout_constraintVertical_bias="0.203"
    android:contentDescription="@string/new_exercise_button"
    />

  <EditText
    android:id="@+id/hours_new_exercise"
    android:layout_width="106dp"
    android:layout_height="61dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="10dp"
    android:hint="Horas"
    android:inputType="number"
    app:layout_constraintBottom_toTopOf="@id/add_new_exercise_button"
    app:layout_constraintEnd_toStartOf="@id/minutes_new_exercise"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/exercise_type_text_view" />

  <EditText
    android:id="@+id/seconds_new_exercise"
    android:layout_width="102dp"
    android:layout_height="61dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="10dp"
    android:hint="Segundos"
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/minutes_new_exercise"
    app:layout_constraintTop_toTopOf="@+id/minutes_new_exercise" />

  <EditText
    android:id="@+id/new_series_name"
    android:layout_width="321dp"
    android:layout_height="61dp"
    android:hint="Nome da Série"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/save_new_series_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="SALVAR"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/list_of_exercises" />

  <Button
    android:id="@+id/add_new_exercise_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="ADICIONAR"
    app:layout_constraintBottom_toTopOf="@+id/list_of_exercises"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent" />

  <EditText
    android:id="@+id/minutes_new_exercise"
    android:layout_width="112dp"
    android:layout_height="61dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="10dp"
    android:hint="Minutos"
    android:inputType="number"
    app:layout_constraintEnd_toStartOf="@+id/seconds_new_exercise"
    app:layout_constraintStart_toEndOf="@+id/hours_new_exercise"
    app:layout_constraintTop_toTopOf="@+id/hours_new_exercise" />

  <TextView
    android:id="@+id/exercise_type_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@+id/hours_new_exercise"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/new_exercise_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
