<resources>
  <string name="app_name">Appersonal Trainer</string>
  <string name="action_settings">Settings</string>
  <string name="totalExerciseTime">20</string>
  <string name="minhas_atividades">Minhas Atividades</string>
  <string name="historico">Histórico</string>
  <string name="timer_activity_name">timer_activity</string>
  <string name="homepage_activity_name">homepage_activity</string>
  <string name="create_series_title">Criar Série</string>
  <string name="create_series_activity_name">create_series_activity</string>
  <string name="series_has_no_name_error">Nome da série não pode ser vazio!</string>
  <string name="series_has_no_exercise_error">Série deve conter pelo menos um exercício!</string>
  <string name="exercise_has_empty_time_field_error">Campo de tempo não pode estar vazio!</string>
  <string name="no_exercise_type_error">Defina qual o tipo do exercício!</string>
  <string name="title_homepage">Início</string>
  <string name="title_recents">Recentes</string>
  <string name="series_saved_successfully">Atividade salva com sucesso!</string>
  <string name="nav_view">Barra de navegação</string>
  <string name="list_of_exercises">Lista de exercícios</string>
  <string name="new_exercise_button">Botão para criação de novo exercício</string>
  <string name="hours_new_exercise">Campo de horas de duração do exercício</string>
  <string name="series_list">Lista de atividades</string>
  <string name="create_series_button">Botão de criação de uma atividade</string>
  <string name="series_history_list">Lista de histórico de atividades completadas</string>
</resources>
